--- a/WPFPrototypeReverie/WPFPrototypeReverie.csproj
+++ b/WPFPrototypeReverie/WPFPrototypeReverie.csproj
@@ -106,5 +106,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <SplashScreen Include="Bubble.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
