adding a new page, sound capacity, music capacity, dual playing of tracks, better text encapsulation, a new scene and more

--- a/WPFPrototypeReverie/WPFPrototypeReverie.csproj
+++ b/WPFPrototypeReverie/WPFPrototypeReverie.csproj
@@ -54,11 +54,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Libraries\TextWriter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\MainMenu.xaml.cs">
       <DependentUpon>MainMenu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\TestScene2.xaml.cs">
+      <DependentUpon>TestScene2.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\TestScene.xaml.cs">
       <DependentUpon>TestScene.xaml</DependentUpon>
@@ -74,6 +78,10 @@
     <Page Include="Pages\MainMenu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\TestScene2.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Pages\TestScene.xaml">
       <SubType>Designer</SubType>
